fixed a bug where covers kept their background class, instead of changing on every new page-view, made all the js loading async and added an onload for the inline-js, tweaked project-cover-animation

--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -309,7 +309,7 @@ $cb_quarter-cos: cubic-bezier(.33,0,.6,.37); // ease-in
 			animation-duration: 1s;
 			animation-fill-mode: both;
 			@for $i from 1 through 10 {
-				&:nth-child(#{$i}) { animation-delay: calc(.5s + (.1s * #{$i})); }
+				&:nth-child(#{$i}) { animation-delay: calc(.3s + (.1s * #{$i})); }
 			}
 		}
 
